--- a/puzzles.html
+++ b/puzzles.html
@@ -4,17 +4,25 @@
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <script src="puzzles.js"></script>
+        <link rel="stylesheet" href="style.css" />
         <title>Puzzles</title>
     </head>
     <body>
-        <p id="question-label">Press the button below to start!</p>
-        <button id="o1" onclick="selectAnswer(1)"></button>
-        <button id="o2" onclick="selectAnswer(2)"></button>
-        <button id="o3" onclick="selectAnswer(3)"></button>
-        <button id="o4" onclick="selectAnswer(4)"></button>
-        <br /><br />
-        <button onclick="getPuzzle()">Get new puzzle</button>
-        <p id="verdict"></p>
-        <p id="explanation"></p>
+        <div class="container">
+            <h1 class="title">Brain Puzzles</h1>
+            <div id="quiz">
+                <p id="question-label" class="question">Loading...</p>
+                <div id="options" class="options">
+                    <div id="o1" class="option" onclick="selectAnswer(1)"></div>
+                    <div id="o2" class="option" onclick="selectAnswer(2)"></div>
+                    <div id="o3" class="option" onclick="selectAnswer(3)"></div>
+                    <div id="o4" class="option" onclick="selectAnswer(4)"></div>
+                </div>
+                <p id="verdict" class="verdict"></p>
+                <p id="correctAns" class="correctAns"></p>
+                <p id="explanation" class="explanation"></p>
+                <button class="btn" onclick="getPuzzle()">Next</button>
+            </div>
+        </div>
     </body>
 </html>
